Replace DeepSeek API key with OpenRouter

--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
       <label>Model
         <select id="model">
           <option value="Gemini">Gemini</option>
-          <option value="DeepSeek">DeepSeek</option>
+          <option value="OpenRouter">OpenRouter</option>
         </select>
       </label>
       <label>Temperature <input type="range" id="temp" min="0" max="1" step="0.1" value="0.7"></label>
