--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MyGpt</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.min.js"></script>
 </head>
 <body>
+  <canvas id="bg"></canvas>
   <div class="container">
     <aside class="left">Chat History (todo)</aside>
     <main class="center">
